--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-image-file": "^0.1.0",
     "react-scripts": "1.0.13"
   },
   "scripts": {
