--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-image-file": "^0.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "react-sortable-hoc": "^0.6.7"
   },
   "scripts": {
     "start": "react-scripts start",
