--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-image-file": "^0.1.0",
+    "react-progressbar.js": "^0.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
