--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "react-sortable-hoc": "^0.6.7",
+    "recharts": "^1.0.0-alpha.4",
     "redux": "^3.7.2"
   },
   "scripts": {
